--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,29 @@
     --white: #fff;
     --red: #fb3e3e;
 }
+
+/* Main Styles */
+
+main {
+    background-color: var(--blue950);
+    height: 100vh;
+    position: relative;
+    width: 100%;
+    z-index: 1;
+}
+
+main::before {
+    background-image: url(./assets/mobile/image-host.jpg);
+    background-size: cover;
+    bottom: 0;
+    content: "";
+    left: 0;
+    opacity: 0.2;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.main-content {
+    position: relative;
+}
