--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,7 @@ form {
     flex-direction: column;
     gap: 0.5rem;
     justify-content: center;
+    margin-block-end: 0.5rem;
     width: 100%;
 }
 
@@ -117,6 +118,11 @@ input {
     border: none;
     color: var(--white);
     outline: none;
+    transition: outline 0.2s ease-in-out;
+}
+
+.input-invalid {
+    outline: 2px solid var(--red);
 }
 
 button {
@@ -129,4 +135,36 @@ button {
 
 button:hover {
     background-color: var(--green-light);
+}
+
+.error-msg {
+    color: var(--red);
+    font-size: 1rem;
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
+}
+
+.error-msg-reveal {
+    opacity: 1;
+}
+
+.success-message {
+    align-items: center;
+    background-color: var(--green);
+    border-radius: 1rem;
+    display: flex;
+    left: 50%;
+    height: auto;
+    justify-content: center;
+    opacity: 0;
+    padding: 3rem;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    transition: opacity 0.1s ease-in-out;
+    width: 90%;
+}
+
+.success-message-reveal {
+    opacity: 1;
 }
